# app/Http/Controllers/API/ExternalServices/PaymentsController.php
@@ -13,15 +13,48 @@ class PaymentsController extends Controller
         $this->middleware(['auth:api']);
     }
 
+    /**
+     * @OA\Post(
+     * path="/payments/confirm",
+     * summary="Billing Provider",
+     * description="Confirm a purchase",
+     * operationId="paymentsConfirm",
+     * tags={"Fake External Services"},
+     * security={
+     *   {"access_token": {}},
+     * },
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Purchase data",
+     *    @OA\JsonContent(
+     *       required={"payment_session_token","card"},
+     *       @OA\Property(property="payment_session_token", type="string", example="$2y$04$1rS6a2vh9ePY.mjg0I1gTeCskbl/jTy65DOTDDY/P6n4yvL3J4LcK"),
+     *       @OA\Property(property="card", type="integer", example="4425669844123325"),
+     *    ),
+     * ),
+     *  @OA\Response(
+     *      response=401,
+     *      description="You should be authorized to access the endpoint",
+     *  ),
+     *  @OA\Response(
+     *      response=403,
+     *      description="You don't have permissions to access the endpoint",
+     *  ),
+     * )
+     * )
+     * @param \App\Http\Requests\BillingRequest $request
+     * @return \Illuminate\Contracts\Foundation\Application|\Illuminate\Contracts\Routing\ResponseFactory|\Illuminate\Http\Response
+     */
     public function confirm(BillingRequest $request)
     {
         $purchase = Purchase::unconfirmed()->where('payment_session_token', $request->payment_session_token)->first();
 
         if (is_null($purchase)) {
-            return "You motherfucker, come on you little ass… fuck with me, eh? You fucking little asshole, dickhead cocksucker…You fuckin' come on, come fuck with me! I'll get your ass, you jerk! Oh, you fuckhead motherfucker! Fuck all you and your family! Come on, you cocksucker, slime bucket, shitface turdball! Come on, you scum sucker, you fucking with me? Come on, you asshole!!!";
+            return response("You motherfucker, come on you little ass… fuck with me, eh? You fucking little asshole, dickhead cocksucker…You fuckin' come on, come fuck with me! I'll get your ass, you jerk! Oh, you fuckhead motherfucker! Fuck all you and your family! Come on, you cocksucker, slime bucket, shitface turdball! Come on, you scum sucker, you fucking with me? Come on, you asshole!!!", 404);
         }
 
         $purchase->confirm();
-        return "Your payment is successfully proceeded! Key has been to your email.";
+
+        return response("Your payment is successfully proceeded! Key has been to your email.", 200);
     }
 }
